html in the lab 3

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
 
         <meta charset="utf-8">
 
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
     <body>
@@ -24,11 +26,13 @@
 
         <nav>
 
-            <p><a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="lessons.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="instructors.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="rentals.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a></p>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="instructors.html">Instructors</a>
+                <a href="rentals.html">Rentals</a>
+                <a href="contact.html">Contact</a>
+            </ul>
 
         </nav>
 
@@ -45,7 +49,7 @@
 
                 <p>We are located at: 1122 Music Lane, Chicago, IL 60007 </p>
 
-                <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                <div id="mpa">
                     <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
                     var setting = {"height":540,"width":634,"zoom":10,"queryString":"Chicago, IL, USA","place_id":"ChIJ7cv00DwsDogRAMDACa2m4K8","satellite":false,"centerCoord":[41.834013204876584,-87.73196395410054],"cid":"0xafe0a6ad09c0c000","lang":"en","cityUrl":"/us/il/chicago","cityAnchorText":"Map of Chicago, Illinois, United States","id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"303436"};
                     var d = document;
