--- a/lessons.html
+++ b/lessons.html
@@ -12,6 +12,8 @@
 
         <meta charset="utf-8">
 
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
     <body>
@@ -24,11 +26,13 @@
 
         <nav>
 
-            <p><a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="lessons.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="instructors.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="rentals.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a></p>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="instructors.html">Instructors</a>
+                <a href="rentals.html">Rentals</a>
+                <a href="contact.html">Contact</a>
+            </ul>
 
         </nav>
 
@@ -58,7 +62,7 @@
 
                 <h3>Piano Lessons</h3>
 
-                <img src="images/piano-lesson.jgp" alt="piano teacher and student sitting at a piano" height="260" width="400">
+                <img src="images/piano-lesson.jpg" alt="piano teacher and student sitting at a piano">
 
                 <p>We offer piano lessons for all ages, beginnig at age three. Wheter you are a beginner or have been playing the piano for a while, we have a program to suit your needs. Learn new techniques, theory, harmony, and tone. Learning how to play the piano helps develop hand-eye coordination and self-confidence.</p>
 
@@ -68,7 +72,7 @@
 
                 <h3>Guitar Lessons</h3>
 
-                <img src="images/child-guitar.jpg" alt="child with a sile holding a guitar" height="260" width="400">
+                <img src="images/child-guitar.jpg" alt="child with a sile holding a guitar">
 
                 <p>We teach acoustic guitar, electric guitar, bass guitar, and uklele. We have guitar lessons for beginners, intermedite players, and advanced players. Improve your skills with weekly lessons. Learn new tips and techniques from experienced instructors. We also have a rock band program that you can join!</p>
 
@@ -78,7 +82,7 @@
 
                 <h3>Violin Lessons</h3>
 
-                <img src="images/woman-violin.jpg" alt="woman playing the violin" height="260" width="400">
+                <img src="images/woman-violin.jpg" alt="woman playing the violin">
 
                 <p>We offer violin lessons for all ages, begging at age six. Our violin lessons include a variety of music styles, from fiddle to classical. Our instructors will help you fine-tune techniques and accomplish your musical goals. We work with you to create a customized program, tailored to your needs.</p>
 
