--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <meta charset="utf-8">
 
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
     <body>
@@ -24,13 +26,22 @@
 
         <nav>
 
-            <p><a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="lessons.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="instructors.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="rentals.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a></p>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="instructors.html">Instructors</a>
+                <a href="rentals.html">Rentals</a>
+                <a href="contact.html">Contact</a>
+            </ul>
 
         </nav>
+
+        <!-- Hero Image -->
+        <div id="hero">
+
+            <img src="images/music-notes.png" alt="colorful music notes">
+
+        </div>
 
         <!-- Use the main area to add the main content to the webpage-->
         <main>
