--- a/template.html
+++ b/template.html
@@ -12,6 +12,8 @@
 
         <meta charset="utf-8">
 
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
     <body>
@@ -24,11 +26,13 @@
 
         <nav>
 
-            <p><a href="index.html">Home</a> &nbsp; &#9838; &nbsp;
-            <a href="lessons.html">Lessons</a> &nbsp; &#9838; &nbsp;
-            <a href="instructors.html">Instructors</a> &nbsp; &#9838; &nbsp;
-            <a href="rentals.html">Rentals</a> &nbsp; &#9838; &nbsp;
-            <a href="contact.html">Contact</a></p>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="lessons.html">Lessons</a>
+                <a href="instructors.html">Instructors</a>
+                <a href="rentals.html">Rentals</a>
+                <a href="contact.html">Contact</a>
+            </ul>
 
         </nav>
 
